<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ch.hevs.students.raclettedb.ui.mgmt.SettingsActivity$LanguageChangePreferenceFragment"
        android:icon="@drawable/ic_translate_24px"
        android:title="@string/settings_language" />
    <header
        android:fragment="ch.hevs.students.raclettedb.ui.mgmt.SettingsActivity$ResetDatabaseFragment"
        android:icon="@drawable/ic_database"
        android:title="@string/settings_data" />
    <header
        android:fragment="ch.hevs.students.raclettedb.ui.mgmt.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/settings_about" />

</preference-headers>
