<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hevs.students.raclettedb.ui.shieling.EditShielingActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvEditShieling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvEditShielingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/dk_lemon_yellow_sun"
                android:text="@string/shieling_edit_title"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivEditShielingPhoto"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEditShielingTitle"
                app:srcCompat="@drawable/placeholder_shieling" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilShielingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivEditShielingPhoto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etShielingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dk_lemon_yellow_sun"
                    android:hint="@string/shieling_common_hint_cheese_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilShielingDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilShielingName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etShielingDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dk_lemon_yellow_sun"
                    android:hint="@string/shieling_common_hint_cheese_description"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="10sp"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvEditShielingLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/dk_lemon_yellow_sun"
                android:text="@string/title_shieling_loc"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilShielingDescription" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcvEditShielingMap"
                android:name="ch.hevs.students.raclettedb.util.CustomSupportMapFragment"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEditShielingLocation" />

            <Button
                android:id="@+id/btSaveShieling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/dk_lemon_yellow_sun"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fcvEditShielingMap" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>