<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_main_shieling_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/dk_lemon_yellow_sun"
        android:text="@string/title_shieling_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_shieling" />

    <ImageView
        android:id="@+id/iv_main_shieling"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_shieling"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/tv_main_shieling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/dk_lemon_yellow_sun"
        android:text="@string/title_shieling"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="231dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_raclettedb" />

    <TextView
        android:id="@+id/tv_main_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dk_lemon_yellow_sun"
        android:text="@string/title_favorites"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_logo" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_favorites">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_favorites_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                app:srcCompat="@drawable/placeholder" />

            <ImageView
                android:id="@+id/iv_main_favorites_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                app:srcCompat="@drawable/placeholder" />

            <ImageView
                android:id="@+id/iv_main_favorites_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="8dp"
                app:srcCompat="@drawable/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_main_favorites_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dk_lemon_yellow_sun"
                android:text="@string/title_favorites_cheesename"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_main_favorites_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dk_lemon_yellow_sun"
                android:text="@string/title_favorites_cheesename"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_main_favorites_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dk_lemon_yellow_sun"
                android:text="@string/title_shieling_name"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>